# ScholarScript

./: .gitignore  .marketing-state.json  CNAME  README.md  SUBMIT_DIRECTORIES.md  Start Watcher.lnk  _check_pages.py  _check_runs.py  _check_workflow.py  _restore_repo.py  auto-ingest.ps1  check_build.py  check_repo.py  check_site.py  cleanup-submissions.ps1  config.yaml  debug_ingest.py  desktop-drop.bat  desktop-drop.ps1  enable_pages.py  enable_pages2.py  extract_shakespeare.py  fix_cname.py  fix_tables.py  format_mcqs.py  index.html  install-automation.ps1  merge_deploy.py  post-ingest-hook.ps1  publish.ps1  pyproject.toml  quick-upload.ps1  requirements.txt  robots.txt  rss.xml  search-index.json  serve.ps1  setup-github.ps1  sitemap.xml  supervisor.pid  (+5 more)
.github/: marketing-config.yml
.promotion-logs/: directory-submissions.json  ping-results.json  repeat-log.json
ScholarScriptApp/: ScholarScriptPortable.spec  app.py  build_app.ps1  config_manager.py  deploy_github.py  gen_icon.py  main.py  version_info.txt
author-of-month/: index.html
creative-writing/: index.html
css/: style.css
data/: bluesky-audience-report.json  visitor-stats.json
donate/: index.html
external-links/: index.html
health/: index.html
papers/: index.html
scholarscript/: __main__.py  analytics.py  cleaners.py  cli.py  cloner.py  config.py  deployer.py  engine.py  ingestion.py  models.py  parser.py  plugins.py  seo.py  test_parser.py
social-posts/: facebook-group-posts.md  linkedin-post-2026-07-10.md  linkedin-post-2026-07-12.md  linkedin-post-2026-07-13.md  marketing-report.json  (+64 more)
(+205 files in other folders)
